--- a/src/app/modules/tour-plan/tour-plan/tour-plan.component.html
+++ b/src/app/modules/tour-plan/tour-plan/tour-plan.component.html
@@ -51,120 +51,123 @@
         </div>
 
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label class="customMatLabel">Circle</mat-label>
-
-                <mat-select [(ngModel)]="selected_c" formControlName="Circle" [disabled]="disable_circle">
-                    <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"
-                    >
-                        {{circle?.CircleCode}}
-                    </mat-option>
-                </mat-select>
+                <mat-label class="customMatLabel">MCO's Name</mat-label>
+                <input matInput placeholder="Enter Vendor Address" formControlName="McoName" autocomplete="off" readonly="readonly"/>
             </mat-form-field>
         </div>
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label class="customMatLabel">Cnic</mat-label>
-                <input matInput placeholder="Cnic" formControlName="Cnic" maxlength="30"
-                       autocomplete="off" appNumberOnly/>
+                <mat-label class="customMatLabel">P.P.NO</mat-label>
+                <input matInput placeholder="Enter Vendor Address" formControlName="PPNO" autocomplete="off" readonly="readonly"/>
+            </mat-form-field>
+        </div>
+
+        <div *ngIf="circle.length>0" class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <mat-label>Circle No</mat-label>
+            <mat-select  [disabled]='isView' formControlName="CircleId">
+                <mat-option>
+                    Select
+                </mat-option>
+                <mat-option *ngFor="let obj of circle" [value]="obj.Id">
+                    {{obj.CircleCode}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        </div>
+
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <mat-label class="customMatLabel">Date of Visit (dd/MM/yyyy) <strong class="matMandatory">*</strong></mat-label>
+            <input readonly matInput [matDatepicker]="picker" formControlName="VisitedDate"  autocomplete="off" (dateChange)="setVisitedDate()" [min]="minDate"  />
+
+            <mat-datepicker-toggle [disabled]='isView' matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker [disabled]='isView' #picker></mat-datepicker>
+        </mat-form-field>
+        </div>
+
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <mat-label class="customMatLabel">Purpose<strong class="matMandatory">*</strong></mat-label>
+                <input [readonly]='isView' matInput placeholder="Enter Tour Purpose" formControlName="Purpose" autocomplete="off"/>
             </mat-form-field>
         </div>
 
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <mat-label class="customMatLabel">Remarks</mat-label>
+                <input matInput [readonly]='readonly' appAlphaNumericField placeholder="Enter Remarks" formControlName="Remarks" autocomplete="off"/>
+            </mat-form-field>
+        </div>
 
-            <button mat-raised-button color="accent"
-                    type="button" (click)="getBorrower()"><span><i
-                class="fa fa-search"> &nbsp;</i> Find</span></button>
+<!--        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">-->
+<!--        -->
+<!--        </div>-->
+
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+            <button class="m-2" mat-raised-button color="primary" *ngIf="isAdd" (click)="Add()">Add</button>
+            <button class="m-2" mat-raised-button color="primary" *ngIf="isUpdate" (click)="Update()">Update</button>
+            <button class="m-2" *ngIf="isApproval" mat-raised-button color="primary" (click)="ChanageTourStatus('A')">Authorize</button>
+            <button class="m-2" *ngIf="isApproval" mat-raised-button color="primary" (click)="ChanageTourStatus('R')">Reffer Back</button>
+            <button class="m-2" *ngIf="flag=='1'" mat-raised-button color="primary" (click)="ChanageTourStatus('S')">Submit</button>
+            <button class="m-2" *ngIf="flag=='1'" mat-raised-button color="primary" (click)="ChanageTourStatus('C')">Cancel</button>
         </div>
 
     </div>
     <div class="flex flex-auto mx-10" style="flex-direction: column;overflow-y: scroll">
-        <div class="example-table-container">
+        <div  *ngIf="dataSource.length>0 && isTable" class="example-table-container">
             <!--[style.height]="gridHeight"-->
-            <mat-table
-                #table
-                [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
-                matSort
-                #sort1="matSort"
-                matSortActive="id"
-                matSortDirection="asc"
-                matSortDisableClear>
+            <mat-table class="lmat-elevation-z8"
+                       #table
+                       [dataSource]="dataSource"
+                       matSort
+                       #sort1="matSort"
+                       matSortActive="id"
+                       matSortDirection="asc"
+                       matSortDisableClear>
 
-                <ng-container matColumnDef="CustomerName">
-                    <mat-header-cell *matHeaderCellDef>Customer Name</mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">{{borrower.CustomerName}}</mat-cell>
+                <ng-container matColumnDef="VisitedDate">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Date of Visit</mat-header-cell>
+                    <mat-cell *matCellDef="let list">{{list.VisitedDate}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="FatherName">
-                    <mat-header-cell *matHeaderCellDef>FatherName</mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">{{borrower.FatherName}}</mat-cell>
+                <ng-container matColumnDef="Purpose">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Purpose</mat-header-cell>
+                    <mat-cell *matCellDef="let list">{{list.Purpose}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Cnic">
-                    <mat-header-cell *matHeaderCellDef>Cnic</mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">{{borrower.Cnic}}</mat-cell>
-                </ng-container>
 
-                <ng-container matColumnDef="LoanCaseNo">
-                    <mat-header-cell *matHeaderCellDef>LC #</mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">{{borrower.LoanCaseNo}}</mat-cell>
-                </ng-container>
+                <ng-container matColumnDef="Edit">
+                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-cell *matCellDef="let list">
+                        <!--      *ngIf="CheckEditStatus(list)"-->
+                        <button mat-icon-button color="primary"
+                                (click)="editList(list)">
+                            <mat-icon style="margin-left: 5px;" title="Edit Tour Plan">edit</mat-icon>
+                        </button>
 
-                <ng-container matColumnDef="PermanentAddress">
-                    <mat-header-cell *matHeaderCellDef>Permanent Address</mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">{{borrower.PermanentAddress}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="TotalSanctionedAmount">
-                    <mat-header-cell *matHeaderCellDef>Total Sanctioned Amount</mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">{{borrower.TotalSanctionedAmount}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="SanctionLimit">
-                    <mat-header-cell *matHeaderCellDef>Sanction Limit</mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">{{borrower.SanctionLimit}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="Link">
-                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">
-                        <span id="llcInquiryText" (click)="viewInquiry(borrower)"><b>View LC Inquiry</b></span>
-                        <!-- <a (click)="viewInquiry(borrower)">View LC Inquiry</a>             -->
                     </mat-cell>
                 </ng-container>
 
-                <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;"
-                                class="table-header-background"></mat-header-row>
-
+                <ng-container matColumnDef="Delete">
+                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-cell *matCellDef="let list">
+                        <!--              *ngIf="CheckDeleteStatus(list)"-->
+                        <button mat-icon-button color="primary"
+                                (click)="deleteList(list)">
+                            <mat-icon title="Delete Tour Plan">delete </mat-icon>
+                        </button>
+                    </mat-cell>
+                </ng-container>
+                <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-
             </mat-table>
 
-
-
-
-            <!-- <div class="mat-table__message" *ngIf="!loading && !matTableLenght">No records found</div>
-            <div class="mat-table__message" *ngIf="loading">Please wait....</div> -->
-
         </div>
-        <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
-            Items per page:
-            <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
-                        style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
-                <mat-option [value]="5">5</mat-option>
-                <mat-option [value]="10">10</mat-option>
-                <mat-option [value]="25">25</mat-option>
-                <mat-option [value]="50">50</mat-option>
-                <mat-option [value]="1000">1000</mat-option>
-            </mat-select>
-            <button (click)="paginate(1)">First</button>
-            <pagination-controls display="inline" (pageChange)="paginate($event)"
-                                 style="display: inline-block;"></pagination-controls>
-            <button (click)="paginate(MathCeil(totalItems/itemsPerPage))">Last</button>
-            <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
-
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4" *ngIf="dataSource.length>0">
+            <button mat-raised-button color="primary" (click)="Submit()">Submit All</button>
         </div>
 
     </div>
